# nexid

./: .env.example  .gitignore  .golangci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
api/openapi/: openapi.yaml
cmd/api/: main.go
docs/: SECURITY.md
internal/config/: config.go
internal/crypto/: encryption.go  password.go
internal/middleware/: middleware.go
internal/repository/: postgres.go  redis.go
migrations/: 001_initial_schema.sql
pkg/oauth2/: handler.go
src/: error.rs  main.rs  routes.rs
src/config/: mod.rs
src/crypto/: encryption.rs  mod.rs  password.rs
src/db/: consents.rs  mod.rs  oauth_clients.rs  users.rs
src/handlers/: consents.rs  gdpr.rs  health.rs  mod.rs  users.rs
src/middleware/: mod.rs
src/models/: mod.rs  token.rs  user.rs
src/oauth2/: authorize.rs  discovery.rs  mod.rs  token.rs  userinfo.rs
