[package]
name = "nexid"
version = "0.1.0"
edition = "2024"
authors = ["Nathan Hallouin"]
description = "Universal Digital Identity Platform - Secure, GDPR-compliant identity provider"
license = "MIT"
repository = "https://github.com/NathanHallouin/nexid"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout", "limit", "set-header"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# JWT & Auth
jsonwebtoken = "9.3"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client (for OAuth callbacks)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# URL parsing
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
